updated the overflow property of sliders to avoid scrollbars

--- a/scss/elements/_slider.scss
+++ b/scss/elements/_slider.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 125px;
   margin-top: 20px;
-  overflow: auto;
+  overflow: hidden;
   .slider-row {
     display: flex;
     justify-content: center;
